--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "webpack_babel",
+  "name": "react-template",
   "version": "1.0.0",
-  "type":"module",
+  "type": "module",
   "description": "",
   "main": "main.js",
-  "private": true,
+  "private": false,
   "scripts": {
     "build": "webpack --mode production --config webpack.config.prod.js",
     "watch": "webpack --watch",
     "start": "webpack serve --open --config webpack.config.dev.js",
     "start-vite": "vite",
-    "build-vite": "vite build", 
-    "preview-vite": "vite preview"
+    "build-vite": "vite build",
+    "preview-vite": "vite preview",
+    "lint": "eslint ./src",
+    "lint:fix":"eslint --fix ./src"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "MAb <awana4872@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.23.3",
+    "@babel/eslint-parser": "^7.23.3",
     "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@babel/plugin-transform-runtime": "^7.23.4",
     "@babel/preset-env": "^7.23.3",
@@ -27,7 +30,12 @@
     "@vitejs/plugin-react": "^4.2.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "eslint": "^8.55.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.3",
+    "prettier": "^3.1.0",
     "style-loader": "^3.3.3",
     "vite": "^5.0.2",
     "webpack": "^5.89.0",
@@ -39,5 +47,6 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  }
+  },
+  "repository": "git@github.com:MAb540/webpack-vite-experiment.git"
 }
